--- a/Momma's Kitchen Web App/Project/templates/update.html
+++ b/Momma's Kitchen Web App/Project/templates/update.html
@@ -48,7 +48,7 @@
             <br>
         </div>
         <div class="dropdown">
-            <label for="Price">Price(approx.)</label><br>
+            <label for="Price">Price(approx.)($)</label><br>
             <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButtonPrice" name="price" data-toggle="dropdown" aria>
                 Price Range
             </button> 
