--- a/Momma's Kitchen Web App/Project/templates/update.html
+++ b/Momma's Kitchen Web App/Project/templates/update.html
@@ -123,7 +123,8 @@
         <label for="Recipe">Recipe</label><br>
         <input type="text" style="background-color: lightskyblue;" name="recipe" placeholder="Recipe"><br>
         
-        <button type="submit" id="btnaddfood" class="btn btn-danger">Save Food</button>   
+        <button type="submit" id="btnaddfood" class="btn btn-danger">Update Food</button>   
+        <hr>
     </form>
 </div>
 
